<resources>
    <string name="app_name">SQLiteAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="name">Company Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="street">Website</string>
    <string name="country">Products and Services</string>
    <string name="classification">Classification</string>
    <string name="consultancy">Consultancy</string>
    <string name="custom">Custom development</string>
    <string name="software">Software factory</string>
    <string name="save">Save Contact</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


</resources>